[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.poetry]
name = "meta_stats"
version = "0.1.0"
description = "A Rust library with Python bindings for Meta Stats"
authors = ["David Engelmann <david@beatgig.com>"]
readme = "README.md"
packages = [{ include = "meta_stats" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --tb=short"
testpaths = ["test"]

[tool.maturin]
bindings = "pyo3"

